# rust-sample-app

./: Cargo.toml  README.md
rust-sample-app-adapters/: Cargo.toml
rust-sample-app-adapters/src/repository/: health_check.rs
rust-sample-app-drivers/: Cargo.toml
rust-sample-app-drivers/src/: lib.rs
rust-sample-app-drivers/src/modules/: mod.rs
rust-sample-app-drivers/src/routes/: health.rs  mod.rs
rust-sample-app-drivers/src/start_up/: mod.rs
rust-sample-app-models/: Cargo.toml
rust-sample-app-usecase/: Cargo.toml
